--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,18 +1,13 @@
-.container {
-  max-width: 1440px;
-  padding: 0 120px;
-  outline: 1px solid tomato;
-  margin: 0 auto;
-}
-
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 24px 0;
+  padding: 24px 120px;
+
+  background-color: var(--color-badges);
 }
 
-.list {
+.nav {
   display: flex;
   gap: 32px;
 }
@@ -23,4 +18,7 @@
   line-height: 125%;
 
   color: var(--color-main);
+}
+.active {
+  color: var(--color-button-hover);
 }
