--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,32 @@ li {
   padding-left: 0;
   margin: 0;
 }
+
+body {
+  font-family: "Manrope", sans-serif;
+  line-height: 1.5;
+  color: var(--color-white);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  text-decoration: none;
+}
