added some styles to inputs

--- a/src/components/Form/CatalogForm.module.css
+++ b/src/components/Form/CatalogForm.module.css
@@ -19,10 +19,11 @@
 
 .field {
   border-radius: 12px;
-  padding: 12px 16px;
+  padding: 10px 16px;
   background-color: var(--color-inputs);
   border: none;
   cursor: pointer;
+  font-weight: 500;
 }
 
 .brandSelect {
@@ -39,21 +40,34 @@
 }
 
 .mileageInput {
+  border: none;
+  background-color: var(--color-inputs);
+  cursor: pointer;
+  width: 90px;
+}
+
+.mileageInput:focus {
+  outline: none;
+}
+
+.prefix {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 125%;
+  color: var(--color-main);
+  padding-right: 2px;
+}
+
+.inputWithPrefix {
+  display: flex;
+  width: 160px;
   padding: 12px 0 12px 24px;
   font-weight: 500;
   font-size: 16px;
   line-height: 125%;
-
-  background-color: var(--color-inputs);
-  border: none;
   border-radius: 0 12px 12px 0;
 
-  width: 160px;
-
-  cursor: pointer;
-  &::placeholder {
-    color: var(--color-main);
-  }
+  background-color: var(--color-inputs);
 
   &:first-child {
     border-radius: 12px 0 0 12px;
