--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ li {
 body {
   font-family: "Manrope", sans-serif;
   line-height: 1.5;
-  color: var(--color-white);
+  color: var(--color-main);
 }
 
 h1,
